--- a/app/src/main/res/layout/conversion.xml
+++ b/app/src/main/res/layout/conversion.xml
@@ -26,7 +26,7 @@
             android:background="@drawable/rounded_header"/>
 
         <LinearLayout
-            android:id="@+id/pdftoword"
+            android:id="@+id/wordtopdf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -53,7 +53,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="PDF to Word"
+                    android:text="Word to PDF"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     android:textColor="#000"/>
@@ -61,7 +61,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Convert your PDFs to Word"
+                    android:text="Convert your Word to PDF"
                     android:textColor="#333"/>
             </LinearLayout>
         </LinearLayout>
